added portfolio heading

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body><header>
-   <pre><h1>                                             <u>my portfolio</u>    </h1></pre>
+   <pre><h1>                                             <u>MY PORTFOLIO</u>    </h1></pre>
 <pre></header>
     <artical><h2>
         my self shreevatsa i am from shivamogga , karnataka currently i am studying BCA  in mgm evening  udupi this is a project i made in 2sem useing html
