"added initial files"

--- a/education.html
+++ b/education.html
@@ -6,6 +6,11 @@
     <title>Document</title>
 </head>
 <body>
+    <pre><h2>                                                              education :</h2></pre>
+    <ul>
+    <li>i have compleated my primery education form -<h4> Shriram prajna bharathi vidya kendra , nittur</h4></li>
+    <li>pre-univercity education from - <h4>purna prajna college ,admar</h4></li>
+    <li>currently studying BCA in -<h4>mahatma gandhi evening college ,udupi</h4></li>
 
 
 
@@ -14,8 +19,7 @@
 
 
 
-    
-    <p>my education</p>
+    </ul>
     
 </body>
 </html>
